# pylspack

./: CONTRIBUTING.md  MAINTAINERS.md  README.md  mypy.ini  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: python-package.yml
pylspack/: leverage_scores.py  linalg_kernels.py
src/: CMakeLists.txt  basic_kernels.h  countsketch.h  csr_kernels.h  includes.h  linalg_kernels.cpp  row_major_kernels.h
test/: test_csrcgs.py  test_csrjlt.py  test_csrrk.py  test_csrsqn.py  test_gemm.py  test_leverage_scores.py  test_rmcgs.py  test_rmdsc.py  test_rmsqn.py  test_scale.py  test_set_randn.py  test_set_value.py  utils.py
