cmake_minimum_required (VERSION 3.11)
project (linalg_kernels CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED on)
find_package(OpenMP REQUIRED)
set(BASIC_CMAKE_CXX_FLAGS "-O3 -funroll-loops -ftree-vectorize -fPIC -fopenmp-simd")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} ${PYLSPACK_ADDITIONAL_CMAKE_CXX_FLAGS} ${BASIC_CMAKE_CXX_FLAGS}")
message("Building with the following compiler flags: ${CMAKE_CXX_FLAGS}")
add_library(linalg_kernels SHARED "${CMAKE_SOURCE_DIR}/linalg_kernels.cpp")
set_target_properties(linalg_kernels PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(linalg_kernels ${OpenMP_CXX_LIBRARIES})
install (TARGETS linalg_kernels DESTINATION lib)
